# resume-parser-workflow

./: .env.example  BUILD_SPEC.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: CandidateDetail.jsx  CandidateListTable.jsx  CandidateTable.jsx  CertificationCard.jsx  DropZone.jsx  EducationCard.jsx  ErrorBanner.jsx  ExperienceCard.jsx  JsonView.jsx  LoadingSpinner.jsx  NavBar.jsx  Pagination.jsx  SkillTag.jsx
frontend/src/pages/: CandidatesPage.jsx  UploadPage.jsx
frontend/src/styles/: CandidateDetail.css  CandidateListTable.css  CandidateTable.css  CandidatesPage.css  Cards.css  DropZone.css  ErrorBanner.css  JsonView.css  LoadingSpinner.css  NavBar.css  Pagination.css  SkillTag.css  UploadPage.css  global.css
output/: candidate_037740b7.json
resume_parser_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: schema.sql
src/: __init__.py  api.py  db.py  extractor.py  logging_config.py  main.py  models.py  orm_models.py  parser.py  validator.py
tests/: __init__.py  test_api.py  test_db.py  test_extractor.py  test_parser.py  test_validator.py
tests/fixtures/: sample_resume.txt
